<resources>
    <string name="app_name">Get That Checked Out</string>
    <string name="title_activity_doctor_finder">Map</string>
    <string name="seach_local_medical_facilities">Seach Local Medical Facilities</string>
    <string name="search">Search</string>
    <string name="todo">TODO</string>
    <string name="symptoms">Symptoms</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string-array name="bloodtype_array">
        <item>Most Rare: AB-</item>
        <item>B-</item>
        <item>AB+</item>
        <item>A-</item>
        <item>O-</item>
        <item>B+</item>
        <item>A-</item>
        <item>Most Common: O+</item>
    </string-array>
    <string-array name="marital_array">
        <item>Single</item>
        <item>Married</item>
        <item>Compicated</item>
        <item>Other</item>>
    </string-array>

    <string name="calendar_for_you">Calendar for You</string>
    <string name="save_appointment">Save My Appointment</string>
    <string name="save_pill_reminder">Save My Pill Reminder</string>
    <string name="save_pill_refill">Save My Pill Refill</string>
    <string name="return_home">Return Home</string>
    <string name="selected_date">Selected Date</string>
    <string name="dont_forget">Remember to take pill:</string>
    <string name="dont_forget2">Remember your appointment:</string>
    <string name="dont_forget3">Remember your refill:</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="return_calendar">Return to Calendar</string>

</resources>
