<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppointmentAlarm"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="10dp">

    <TextView
        android:id="@+id/alarmTitleDoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_forget2"
        android:layout_marginTop="5dp"
        android:textColor="#000000"
        android:textSize="25dp"
        />

    <EditText
        android:id="@+id/doctorInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter your Doctor"
        />

    <TimePicker
        android:id="@+id/alarmClock2"
        android:layout_width="300dp"
        android:layout_height="350dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="2dp"
        >
        <Button
            android:id="@+id/alarmbtn1Doc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set"
            android:layout_marginRight="20dp"/>
        <Button
            android:id="@+id/alarmbtn2Doc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"/>
    </LinearLayout>

    <Button
        android:id="@+id/returnCalen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/return_calendar"/>

</LinearLayout>